--- a/radio-operator-toolbox-react-native/app.json
+++ b/radio-operator-toolbox-react-native/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "radio-operator-toolbox-react-native",
-    "slug": "radio-operator-toolbox-react-native",
+    "name": "RadioOperatorToolbox",
+    "slug": "RadioOperatorToolbox",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
