--- a/radio-operator-toolbox-react-native/package.json
+++ b/radio-operator-toolbox-react-native/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "radio-operator-toolbox-react-native",
+  "name": "radiooperatortoolbox",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
