--- a/radio-operator-toolbox-angular/package.json
+++ b/radio-operator-toolbox-angular/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shooting-trainer",
+  "name": "RadioOperatorToolbox",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.1.2",
     "@angular/router": "^16.1.2",
+    "@angular/service-worker": "^16.0.0",
     "@ng-bootstrap/ng-bootstrap": "^15.0.1",
     "bootstrap": "^5.3.0",
     "lodash-es": "^4.17.21",
