--- a/radio-operator-toolbox-angular/.github/workflows/angular-cli-ghpages.yml
+++ b/radio-operator-toolbox-angular/.github/workflows/angular-cli-ghpages.yml
@@ -22,5 +22,6 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
+        cd radio-operator-toolbox-angular
         npm install
         npm run ng -- deploy --base-href=/RadioOperatorToolbox/ --name="KubaMiszcz" --email="zielonyeufor@gmail.com" --no-silent
