--- a/radio-operator-toolbox-angular/.github/workflows/angular-cli-ghpages.yml
+++ b/radio-operator-toolbox-angular/.github/workflows/angular-cli-ghpages.yml
@@ -23,6 +23,5 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         ls
-        cd radio-operator-toolbox-angular
-        npm install
+        cd RadioOperatorToolbox && npm install
         npm run ng -- deploy --base-href=/RadioOperatorToolbox/ --name="KubaMiszcz" --email="zielonyeufor@gmail.com" --no-silent
