--- a/radio-operator-toolbox-angular/.github/workflows/angular-cli-ghpages.yml
+++ b/radio-operator-toolbox-angular/.github/workflows/angular-cli-ghpages.yml
@@ -22,6 +22,5 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        ls
-        cd RadioOperatorToolbox && npm install
-        npm run ng -- deploy --base-href=/RadioOperatorToolbox/ --name="KubaMiszcz" --email="zielonyeufor@gmail.com" --no-silent
+        npm install
+        npm run ng -- deploy --base-href=/RadioOperatorToolbox/RadioOperatorToolbox/ --name="KubaMiszcz" --email="zielonyeufor@gmail.com" --no-silent
