--- a/radio-operator-toolbox-angular/package.json
+++ b/radio-operator-toolbox-angular/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng deploy --repo=https://github.com/kubamiszcz/RadioOperatorToolbox.git --name='kubamiszcz' --email=zielonyeufor@gmail.com --no-silent"
+    "deploy": "ng deploy --repo=https://github.com/kubamiszcz/RadioOperatorToolbox.git --name='kubamiszcz' --email=zielonyeufor@gmail.com --no-silent",
+    "gh-deploy": "git push origin :gh-pages && git subtree push --prefix dist origin gh-pages"
   },
   "private": true,
   "dependencies": {
