--- a/.github/workflows/angular-cli-ghpages2.yml
+++ b/.github/workflows/angular-cli-ghpages2.yml
@@ -22,11 +22,6 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        uses: JamesIves/github-pages-deploy-action@v4.4.3
-        with:
-          branch: gh-pages # The branch the action should deploy to.
-          folder: dist # The folder the action should deploy.
-          # You can specify additional configuration here as needed.
-        #npm install
-        #npm run ng --gh-deploy
-        #npm run ng -- deploy --base-href=/RadioOperatorToolbox/ --name="KubaMiszcz" --email="zielonyeufor@gmail.com" --no-silent
+        npm install
+        npm run ng --gh-deploy
+        npm run ng -- deploy --base-href=/RadioOperatorToolbox/radio-operator-toolbox-angular/ --name="KubaMiszcz" --email="zielonyeufor@gmail.com" --no-silent
