--- a/.github/workflows/angular-cli-ghpages.yml
+++ b/.github/workflows/angular-cli-ghpages.yml
@@ -24,6 +24,6 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        echo "today={$(date +'%Y-%m-%d')}" >> build.json
+        echo "{ \"build\":\"$(date +'%Y-%m-%d')\"}" > build.json
         npm install
         npm run ng -- deploy --base-href=/RadioOperatorToolbox/ --name="KubaMiszcz" --email="zielonyeufor@gmail.com" --no-silent
