--- a/.github/workflows/angular-cli-ghpages.yml
+++ b/.github/workflows/angular-cli-ghpages.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages via angular-cli-ghpages
 on:
   push:
     branches:
-    - ymltest
+    - develop
 
 jobs:
   build-and-deploy:
