generate build dat by GHactions (#2)
* Update angular-cli-ghpages.yml

* Update angular-cli-ghpages.yml

* Update angular-cli-ghpages.yml

* Update angular-cli-ghpages.yml

* Update angular-cli-ghpages.yml

* Update angular-cli-ghpages.yml

* Update angular-cli-ghpages.yml

* Update app-settings.service.ts

* Update app-settings.service.ts

* Update angular-cli-ghpages.yml

* Update angular-cli-ghpages.yml1

--- a/.github/workflows/angular-cli-ghpages.yml
+++ b/.github/workflows/angular-cli-ghpages.yml
@@ -24,5 +24,6 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
+        echo "{ \"build\":\"$(date +'%Y%m%d%H%m')\"}" > build.json
         npm install
         npm run ng -- deploy --base-href=/RadioOperatorToolbox/ --name="KubaMiszcz" --email="zielonyeufor@gmail.com" --no-silent
