--- a/.github/workflows/angular-cli-ghpages.yml
+++ b/.github/workflows/angular-cli-ghpages.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Version and build UP
       run: 
-        echo "`jq '.version="$(date +'%Y%m%d%H%m')\"' package.json`" > package.json
+        echo "`jq '.build="$(date +'%Y%m%d%H%m')"' package.json`" > package.json
         jq -r '.build' package.json
 
     - name: Prepare and deploy
