--- a/radio-operator-toolbox-angular/package.json
+++ b/radio-operator-toolbox-angular/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.0.0",
+    "@angular/cdk": "^16.2.13",
     "@angular/common": "^16.0.0",
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
@@ -24,6 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "^15.0.1",
     "bootstrap": "^5.3.0",
     "lodash-es": "^4.17.21",
+    "mgrs": "^2.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "^0.13.1"
@@ -34,13 +36,13 @@
     "@angular/compiler-cli": "^16.1.2",
     "@types/jasmine": "~4.3.0",
     "@types/lodash-es": "^4.17.7",
+    "angular-cli-ghpages": "^1.0.5",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~5.0.2",
-    "angular-cli-ghpages": "^1.0.5"
+    "typescript": "~5.0.2"
   }
 }
