--- a/radio-operator-toolbox-angular/package.json
+++ b/radio-operator-toolbox-angular/package.json
@@ -24,6 +24,7 @@
     "@angular/service-worker": "^16.0.0",
     "@ng-bootstrap/ng-bootstrap": "^15.0.1",
     "bootstrap": "^5.3.0",
+    "guid-typescript": "^1.0.9",
     "lodash-es": "^4.17.21",
     "mgrs": "^2.0.0",
     "rxjs": "~7.8.0",
